--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Wineot.LoginPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Wineot.LoginPage" BackgroundImage="background.jpg">
 	<ContentPage.Padding>
 		<OnPlatform x:TypeArguments="Thickness" iOS="20, 40, 20, 20" Android="20, 20, 20, 20" WinPhone="20, 20, 20, 20" />
 	</ContentPage.Padding>
@@ -10,13 +10,25 @@
 					<x:String>#c41230</x:String>
 				</x:Arguments>
 			</Color>
+			<Color x:FactoryMethod="FromHex" x:Key="FontColor">
+				<x:Arguments>
+					<x:String>#6b6b6b</x:String>
+				</x:Arguments>
+			</Color>
 		</ResourceDictionary>
 	</ContentPage.Resources>
 	<ContentPage.Content>
 		<StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="5">
-			<Entry x:Name="usernameText" Placeholder="Nom d'utilisateur" HeightRequest="42" />
+			<StackLayout HorizontalOptions="FillAndExpand" Orientation="Vertical" HeightRequest="90">
+				<Image Source="logo-black.png" Aspect="AspectFill" HeightRequest="70" />
+			</StackLayout>
+			<Entry x:Name="usernameText" Placeholder="Nom d'utilisateur" HeightRequest="42" ><Image Source="unlock.png" Scale="0.7"></Image></Entry>
 			<Entry x:Name="passwordText" Placeholder="Mot de passe" IsPassword="true" HeightRequest="42" />
-			<Button x:Name="loginButon" Text="Connexion" Clicked="OnLogin" BorderColor="{StaticResource ButtonColor}" TextColor="{StaticResource ButtonColor}" BorderWidth="1" />
+			<Button x:Name="loginButon" Text="Connexion" Clicked="LoginAction" BorderColor="{StaticResource ButtonColor}" BackgroundColor="{StaticResource ButtonColor}" TextColor="White" BorderWidth="1" BorderRadius="5" />
+			<StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" Spacing="10">
+				<Button Text="Mot de passe oublié ?" Clicked="ForgetPasswordAction" VerticalOptions="Center" HorizontalOptions="StartAndExpand" FontAttributes="None" FontSize="12" TextColor="{StaticResource FontColor}" />
+				<Button Text="Nouveau ? S'inscrire" Clicked="RegisterAction" VerticalOptions="Center" HorizontalOptions="EndAndExpand" FontAttributes="None" FontSize="12" TextColor="{StaticResource FontColor}" />
+			</StackLayout>
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
