--- a/Views/HistoryPage.xaml
+++ b/Views/HistoryPage.xaml
@@ -1,21 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:constants="clr-namespace:XamarinFormsSample;assembly=XamarinFormsXamlSample" x:Class="Wineot.HistoryPage" Title="Historique">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="Wineot.HistoryPage" Title="Historique">
 	<ContentPage.Content>
-		<ListView x:Name="WineListView" SeparatorVisibility="None" RowHeight="84"  BackgroundColor="#eee" >
+		<ListView x:Name="WineListView" IsPullToRefreshEnabled="False" RefreshCommand="{Binding GetWineHistoryAction}" SeparatorVisibility="None" RowHeight="84"  BackgroundColor="{StaticResource SecondaryTextColor}" >
 			<ListView.ItemTemplate>
 				<DataTemplate>
 					<ViewCell>
-						<StackLayout Orientation="Vertical">
+						<StackLayout Orientation="Vertical" BackgroundColor="#B6B6B6">
 							<StackLayout Orientation="Horizontal" BackgroundColor="White" Spacing="2">
-								<Image Source="background.jpg" HeightRequest="84"/>
-								<StackLayout Orientation="Vertical" Spacing="2">
-									<Label Text="{Binding winery.name}" FontSize="12"/>
-									<Label Text="{Binding name}" />
+								<Image Source="background.jpg" WidthRequest="50" HorizontalOptions="Start"/>
+								<StackLayout Orientation="Vertical" Spacing="2" VerticalOptions="CenterAndExpand">
+									<Label Text="{Binding winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
+									<Label Text="{Binding name}" TextColor="{StaticResource PrimaryTextColor}"/>
 									<StackLayout Orientation="Horizontal">
-										<Label Text="{Binding winery.country}" FontSize="12"/>
-										<Label Text="-" FontSize="12"/>
-										<Label Text="{Binding winery.region}" FontSize="12"/>
+										<Image Source="flags/fr.png" HeightRequest="15" WidthRequest="15"/>
+										<Label Text="{Binding winery.country}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
+										<Label Text="-" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
+										<Label Text="{Binding winery.region}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
 									</StackLayout>
+									<Label Text="{Binding color}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
 								</StackLayout>
 							</StackLayout>
 						</StackLayout>
