--- a/Views/MenuPage.xaml
+++ b/Views/MenuPage.xaml
@@ -2,5 +2,6 @@
 <TabbedPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Wineot.MenuPage">
+    x:Class="Wineot.MenuPage"
+    Title="Wine'ot">
 </TabbedPage>
