--- a/Views/CameraPage.xaml
+++ b/Views/CameraPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Wineot.CameraPage" Title="Scanner">
 	<ContentPage.Content>
 		<StackLayout>
-			<Button Text="Take Picture" Command="{Binding TakePictureCommand}" />
+			<Button Text="Take Picture" Command="{Binding TakePicture}" />
 			<Image Source="{Binding ImageSource}" VerticalOptions="CenterAndExpand" />
 		</StackLayout>
 	</ContentPage.Content>
