--- a/Views/RegisterPage.xaml
+++ b/Views/RegisterPage.xaml
@@ -1,34 +1,24 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Wineot.RegisterPage">
-	<ContentPage.Padding>
-		<OnPlatform x:TypeArguments="Thickness" iOS="20, 40, 20, 20" Android="20, 20, 20, 20" WinPhone="20, 20, 20, 20" />
-	</ContentPage.Padding>
-	<ContentPage.Resources>
-		<ResourceDictionary>
-			<Color x:FactoryMethod="FromHex" x:Key="ButtonColor">
-				<x:Arguments>
-					<x:String>#c41230</x:String>
-				</x:Arguments>
-			</Color>
-			<Color x:FactoryMethod="FromHex" x:Key="FontColor">
-				<x:Arguments>
-					<x:String>#6b6b6b</x:String>
-				</x:Arguments>
-			</Color>
-		</ResourceDictionary>
-	</ContentPage.Resources>
 	<ContentPage.Content>
-		<StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="5">
-			<Image Source="logo-black.png" Aspect="AspectFill" HeightRequest="90" />
-			<Entry x:Name="usernameRegisterText" Placeholder="Nom d'utilisateur" HeightRequest="42" />
-			<Entry x:Name="emailRegisterText" Placeholder="Email" HeightRequest="42" />
-			<Entry x:Name="passwordRegisterText" Placeholder="Mot de passe" IsPassword="true" HeightRequest="42" />
-			<Entry x:Name="passwordValidationRegisterText" Placeholder="Mot de passe (validation)" IsPassword="true" HeightRequest="42" />
-			<Button x:Name="registerButon" Text="Inscription" Clicked="RegisterAction" BorderColor="{StaticResource ButtonColor}" BackgroundColor="{StaticResource ButtonColor}" TextColor="White" BorderWidth="1" />
-			<StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" Spacing="0">
-				<Button Text="Mot de passe oublié ?" Clicked="ForgetPasswordAction" VerticalOptions="Center" HorizontalOptions="StartAndExpand" FontAttributes="None" FontSize="12" TextColor="{StaticResource FontColor}"/>
-				<Button Text="Se connecter" Clicked="LoginAction" VerticalOptions="Center" HorizontalOptions="EndAndExpand" FontAttributes="None" FontSize="12" TextColor="{StaticResource FontColor}"/>
-			</StackLayout>
-		</StackLayout>
+		<RelativeLayout>
+			<Image Source="background-667h@2x.png" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}" />
+			<Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
+				<StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="5" Padding="20, 20, 20, 20">
+					<StackLayout Orientation="Vertical" HeightRequest="90" Padding="20, 20, 20, 20">
+						<Image Source="logo-black.png" Aspect="AspectFill" HeightRequest="70" />
+					</StackLayout>
+					<Entry x:Name="usernameRegisterText" Placeholder="Nom d'utilisateur" HeightRequest="42" />
+					<Entry x:Name="emailRegisterText" Placeholder="Email" HeightRequest="42" />
+					<Entry x:Name="passwordRegisterText" Placeholder="Mot de passe" IsPassword="true" HeightRequest="42" />
+					<Entry x:Name="passwordValidationRegisterText" Placeholder="Mot de passe (validation)" IsPassword="true" HeightRequest="42" />
+					<Button x:Name="registerButon" Text="Inscription" Clicked="RegisterAction" BorderColor="{StaticResource DarkPrimaryColor}" BackgroundColor="{StaticResource DarkPrimaryColor}" TextColor="{StaticResource TextColor}" BorderWidth="1" BorderRadius="10"/>
+					<StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" Spacing="0">
+						<Button Text="Mot de passe oublié ?" Clicked="ForgetPasswordAction" VerticalOptions="Center" HorizontalOptions="StartAndExpand" FontAttributes="None" FontSize="12" TextColor="{StaticResource SecondaryTextColor}" />
+						<Button Text="Se connecter" Clicked="LoginAction" VerticalOptions="Center" HorizontalOptions="EndAndExpand" FontAttributes="None" FontSize="12" TextColor="{StaticResource SecondaryTextColor}" />
+					</StackLayout>
+				</StackLayout>
+			</Grid>
+		</RelativeLayout>
 	</ContentPage.Content>
 </ContentPage>
