--- a/Views/FavoritePage.xaml
+++ b/Views/FavoritePage.xaml
@@ -11,6 +11,7 @@
 								<StackLayout Orientation="Vertical" Spacing="2" VerticalOptions="CenterAndExpand">
 									<Label Text="{Binding winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
 									<Label Text="{Binding name}" TextColor="{StaticResource PrimaryTextColor}"/>
+									<Label Text="{Binding vintage}" TextColor="{StaticResource PrimaryTextColor}"/>
 									<StackLayout Orientation="Horizontal">
 										<Image Source="flags/fr.png" HeightRequest="15" WidthRequest="15"/>
 										<Label Text="{Binding winery.country}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
