--- a/Views/HistoryPage.xaml
+++ b/Views/HistoryPage.xaml
@@ -9,7 +9,7 @@
 							<StackLayout Orientation="Horizontal" BackgroundColor="White" >
 								<Image Source="background.png" WidthRequest="50" HorizontalOptions="Start"/>
 								<StackLayout Orientation="Vertical" Spacing="2" VerticalOptions="CenterAndExpand">
-									<Label Text="{Binding winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
+									<Label Text="{Binding wine.winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
 									<Label Text="{Binding name}" TextColor="{StaticResource PrimaryTextColor}"/>
 									<StackLayout Orientation="Horizontal">
 										<Image Source="flags/fr.png" HeightRequest="15" WidthRequest="15"/>
