--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -5,10 +5,10 @@
 			<Image Source="background-667h@2x.png" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}" />
 			<Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
 				<StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="5" Padding="20, 20, 20, 20">
-					<StackLayout VerticalOptions="Center" Orientation="Vertical" HeightRequest="90" Padding="20, 40, 20, 20">
-						<Image Source="logo-black.png" Aspect="AspectFill" HeightRequest="70" />
+					<StackLayout Orientation="Vertical" HeightRequest="90" Padding="20, 40, 20, 20">
+						<Image Source="logo-black.png" Aspect="AspectFill" VerticalOptions="Center"  HeightRequest="90" />
 					</StackLayout>
-					<Entry x:Name="usernameText" Placeholder="Nom d'utilisateur" HeightRequest="42">
+					<Entry x:Name="usernameText" Placeholder="Nom d'utilisateur" Keyboard="Email" HeightRequest="42">
 						<Image Source="unlock.png" Scale="0.7">
 						</Image>
 					</Entry>
