--- a/Views/RegisterPage.xaml
+++ b/Views/RegisterPage.xaml
@@ -5,8 +5,8 @@
 			<Image Source="background-667h@2x.png" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}" />
 			<Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
 				<StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="5" Padding="20, 20, 20, 20">
-					<StackLayout Orientation="Vertical" HeightRequest="90" Padding="20, 20, 20, 20">
-						<Image Source="logo-black.png" Aspect="AspectFill" HeightRequest="70" />
+					<StackLayout Orientation="Vertical" HeightRequest="90" Padding="20, 40, 20, 20">
+						<Image Source="logo-black.png" Aspect="AspectFill" VerticalOptions="Center"  HeightRequest="90" />
 					</StackLayout>
 					<Entry x:Name="usernameRegisterText" Placeholder="Nom d'utilisateur" HeightRequest="42" />
 					<Entry x:Name="emailRegisterText" Placeholder="Email" HeightRequest="42" />
