--- a/Views/HistoryPage.xaml
+++ b/Views/HistoryPage.xaml
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="Wineot.HistoryPage" Title="Historique">
 	<ContentPage.Content>
-		<ListView x:Name="WineListView" IsPullToRefreshEnabled="False" RefreshCommand="{Binding GetWineHistoryAction}" SeparatorVisibility="None" RowHeight="84"  BackgroundColor="#eee" >
+		<ListView x:Name="WineListView" IsPullToRefreshEnabled="False" RefreshCommand="{Binding GetWineHistoryAction}" SeparatorVisibility="None" RowHeight="90"  BackgroundColor="#eee" >
 			<ListView.ItemTemplate>
 				<DataTemplate>
 					<ViewCell>
 						<StackLayout Orientation="Vertical" BackgroundColor="#eee" >
 							<StackLayout Orientation="Horizontal" BackgroundColor="White" >
-								<Image Source="background.png" WidthRequest="50" HorizontalOptions="Start"/>
+								<Image Source="background.png" HeightRequest="90" HorizontalOptions="Start"/>
 								<StackLayout Orientation="Vertical" Spacing="2" VerticalOptions="CenterAndExpand">
-									<Label Text="{Binding wine.winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
+									<Label Text="{Binding winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
 									<Label Text="{Binding name}" TextColor="{StaticResource PrimaryTextColor}"/>
 									<StackLayout Orientation="Horizontal">
 										<Image Source="flags/fr.png" HeightRequest="15" WidthRequest="15"/>
