--- a/Views/FavoritePage.xaml
+++ b/Views/FavoritePage.xaml
@@ -1,32 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="Wineot.FavoritePage" Title="Favoris">
 	<ContentPage.Content>
-		<ListView x:Name="WineListView" IsPullToRefreshEnabled="False" RefreshCommand="{Binding GetWineHistoryAction}" SeparatorVisibility="None" RowHeight="90"  BackgroundColor="#eee" >
+		<ListView x:Name="WineListView" IsPullToRefreshEnabled="False" RefreshCommand="{Binding GetWineHistoryAction}" SeparatorVisibility="None" RowHeight="90" BackgroundColor="#eee">
 			<ListView.ItemTemplate>
 				<DataTemplate>
 					<ViewCell>
-						<StackLayout Orientation="Vertical" BackgroundColor="#eee" >
-							<StackLayout Orientation="Horizontal" BackgroundColor="White" >
-								<Image Source="background.png" HeightRequest="90" HorizontalOptions="Start"/>
-								<StackLayout Orientation="Vertical" Spacing="2" VerticalOptions="CenterAndExpand">
-									<Label Text="{Binding winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
-									<StackLayout Orientation="Horizontal" >
-										<Label Text="{Binding name}" TextColor="{StaticResource PrimaryTextColor}"/>
-										<Label Text="{Binding vintage}" TextColor="{StaticResource PrimaryTextColor}"/>
+						<StackLayout Orientation="Vertical" BackgroundColor="#eee">
+							<StackLayout Orientation="Horizontal" BackgroundColor="White">
+								<Image Source="background.png" HeightRequest="90" HorizontalOptions="Start" />
+								<StackLayout Orientation="Vertical" Spacing="2" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand">
+									<Label Text="{Binding winery.name}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12" />
+									<StackLayout Orientation="Horizontal">
+										<Label Text="{Binding name}" TextColor="{StaticResource PrimaryTextColor}" />
+										<Label Text="{Binding vintage}" TextColor="{StaticResource PrimaryTextColor}" />
 									</StackLayout>
-									<StackLayout Orientation="Horizontal" >
-										<StackLayout Orientation="Horizontal" >
-											<Image Source="flags/fr.png" HeightRequest="12" WidthRequest="12"/>
-											<Label Text="{Binding winery.country}" TextColor="{StaticResource SecondaryTextColor}" FontSize="10"/>
-											<Label Text="-" TextColor="{StaticResource SecondaryTextColor}" FontSize="10"/>
-											<Label Text="{Binding winery.region}" TextColor="{StaticResource SecondaryTextColor}" FontSize="10"/>
+									<StackLayout Orientation="Horizontal">
+										<Image Source="flags/fr.png" HeightRequest="15" WidthRequest="15" />
+										<Label Text="{Binding winery.country}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12" />
+										<Label Text="-" TextColor="{StaticResource SecondaryTextColor}" FontSize="12" />
+										<Label Text="{Binding winery.region}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12" />
+									</StackLayout>
+									<StackLayout Orientation="Horizontal" HorizontalOptions="Fill" Padding="5">
+										<StackLayout Orientation="Horizontal" Spacing="1" HorizontalOptions="StartAndExpand">
+											<Label Text="{Binding color}" TextColor="{StaticResource SecondaryTextColor}" FontSize="10" />
 										</StackLayout>
-										<StackLayout Orientation="Horizontal" Spacing="0" >
-											<Label Text="{Binding avgRating}" TextColor="{StaticResource SecondaryTextColor}" FontSize="10"/>
+										<StackLayout Orientation="Horizontal" Spacing="1" HorizontalOptions="CenterAndExpand">
 											<Image Source="star_unselected.png" HeightRequest="10" />
+											<Label Text="{Binding avgRating}" TextColor="{StaticResource SecondaryTextColor}" FontSize="10" />
+										</StackLayout>
+										<StackLayout Orientation="Horizontal" Spacing="1" HorizontalOptions="EndAndExpand">
+											<Image Source="tag.png" HeightRequest="10" />
+											<Label Text="{Binding avgPrice}" TextColor="{StaticResource SecondaryTextColor}" FontSize="10" />
 										</StackLayout>
 									</StackLayout>
-									<Label Text="{Binding color}" TextColor="{StaticResource SecondaryTextColor}" FontSize="12"/>
 								</StackLayout>
 							</StackLayout>
 						</StackLayout>
